tests/snapshots/examples_fixtures/io__aoc_day3_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/io/aoc_day3_part2.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The 4th argument to `best_digit_pos` has the wrong type.

  --> examples/io/aoc_day3_part2.flx:29:48
   |
 9 |     fn best_digit_pos(line, start, end_inclusive, best_digit, best_pos) {

10 |         if start > end_inclusive {

11 |             best_pos

12 |         } else {

13 |         let d = digit_at(line, start)

14 |         if d > best_digit {

15 |             best_digit_pos(line, start + 1, end_inclusive, d, start)

16 |         } else {

17 | 

18 |         best_digit_pos(line, start + 1, end_inclusive, best_digit, best_pos)

19 |     }

20 | }

21 | }

22 | 

23 | fn max_k_value(line, start, k, acc) {

24 |     if k == 0 {

25 |         acc

26 |     } else {

27 |     let n = len(line)

28 |     let end = n - k

29 |     let pos = best_digit_pos(line, start, end, -1, start)
   |                                                ^^
   |                                                -- this argument is `Int`

Help:
  Expected `Option<Int>` as the 4th argument.


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify matching '+' operands (Int+Int, Float+Float, or String+String) with Int and Option<Int>.

  --> examples/io/aoc_day3_part2.flx:31:39
   |
31 |     max_k_value(line, pos + 1, k - 1, acc * 10 + d)
   |                                       ^^^^^^^^^^^^
   |                                       ------------ expected matching '+' operands (Int+Int, Float+Float, or String+String), found Int and Option<Int>
   |                                       ------------ operator operands are known at compile time

Help:
  adjust operand types or add explicit conversion

Found 2 errors.
== stdout ==
<not executed>
